# openpilot-t

./: README.md  abduhnotes  autonomy_launcher.py  capnp.py  conftest.py  launch_openpilot.sh  mkdocs.yml  pyproject.toml  setup_openpilot.sh
autonomy/: README.md  __init__.py  pilot.py
autonomy/control/: controller.py
autonomy/planning/: navigator.py
autonomy/utils/: data_structures.py
cereal/: log.capnp  services.py
common/: params_pyx.py
docs/: pwm_bridge.md  running-openpilot.md
docs/how-to/: raw-actuator-output.md
scootpilot_ws/: CMakeLists.txt  README.md  conftest.py  pytest.ini  run_gui.sh  run_sim.sh  setup.sh
scootpilot_ws/config/: nav2_params.yaml  perception.yaml  safety.yaml  sensors.example.yaml
scootpilot_ws/config/map/: area.osm.pbf  whitelist_tags.yaml
scootpilot_ws/data/bags/: README.md
scootpilot_ws/src/scootpilot_bringup/: package.xml  setup.py
scootpilot_ws/src/scootpilot_bringup/scootpilot_bringup/: __init__.py  bringup_launch.py  param_utils.py
scootpilot_ws/src/scootpilot_control/: package.xml  setup.py
scootpilot_ws/src/scootpilot_control/scootpilot_control/: control_node.py  mpc_controller.py  pure_pursuit.py  speed_controller.py
scootpilot_ws/src/scootpilot_gui/: package.xml  setup.py
scootpilot_ws/src/scootpilot_gui/scootpilot_gui/: __init__.py  main.py
scootpilot_ws/src/scootpilot_gui/scootpilot_gui/widgets/: dashboard.py  estop.py  mapview.py  video.py
scootpilot_ws/src/scootpilot_localization/: package.xml  setup.py
scootpilot_ws/src/scootpilot_localization/scootpilot_localization/: __init__.py  ekf_fusion_node.py  vio_fallback.py
scootpilot_ws/src/scootpilot_perception/: package.xml  setup.py
scootpilot_ws/src/scootpilot_perception/scootpilot_perception/: __init__.py  curb_detector.py  drivable_seg_node.py  fusion_node.py  msgs.py  object_det_node.py  onnx_rt.py
scootpilot_ws/src/scootpilot_planning/: package.xml  setup.py
scootpilot_ws/src/scootpilot_planning/scootpilot_planning/: behavior_layer.py  costmap_layers.py  global_planner.py  local_planner.py  osm_loader.py
scootpilot_ws/src/scootpilot_safety/: package.xml  setup.py
scootpilot_ws/src/scootpilot_safety/scootpilot_safety/: __init__.py  fence_guard.py  heartbeat.py  supervisor_node.py  ttc_monitor.py
scootpilot_ws/src/scootpilot_sensors/: package.xml  setup.py
scootpilot_ws/src/scootpilot_sensors/scootpilot_sensors/: __init__.py  camera_node.py  gnss_node.py  imu_node.py  lidar_node.py  sensor_registry.py  ultrasonic_node.py
scootpilot_ws/src/scootpilot_sim/: package.xml  setup.py
scootpilot_ws/src/scootpilot_sim/scootpilot_sim/: __init__.py  kinematics2d.py  replay_bag.py  sim_node.py  world.py
scootpilot_ws/tests/: conftest.py  test_control.py  test_integration_smoke.py  test_perception.py  test_planning.py  test_safety.py
scripts/: run_webcam_pwm_autopilot.sh  setup_pwm_bridge.sh
scroot/: FILEMAP.md
selfdrive/car/: card.py
selfdrive/controls/: controlsd.py  raw_actuator_logger.py
selfdrive/controls/tests/: test_raw_actuator_logger.py
selfdrive/pwm_bridge/: __init__.py  bridge.py  translator.py
tools/: one_step_openpilot.sh
tools/actuators/: monitor_actuators.py
tools/camera/: camera_openpilot.py
tools/gui/: openpilot_desktop.py
tools/scooter_sensor_hub/: __init__.py  __main__.py  app.py  detectors.py  drivers.py  environment.py  hub.py  logging_utils.py  models.py  preflight.py  types.py
tools/scooter_sensor_hub/tests/: test_hub.py
