<?xml version="1.0"?>
<package format="3">
  <name>scootpilot_sim</name>
  <version>0.1.0</version>
  <description>Simulation tools for ScootPilot.</description>
  <maintainer email="dev@scootpilot.ai">ScootPilot Dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
